--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,89 +1,96 @@
-<div class="container">
-  <div class="application">
-    <nav class="sidebar">
-      <div class="sidebar__user">
-        <img src="assets/img/user.jpg" alt="User picture" class="sidebar__user-picture">
-        <span class="sidebar__username">Name</span>
+<div class="application-grid">
+  <nav class="sidebar">
+    <div class="user-box">
+      <img
+        src="assets/img/user.jpg"
+        alt="User picture"
+        class="user-box__avatar"
+      />
+      <span class="user-box__username">Name</span>
+    </div>
+    <a class="option">
+      <svg class="option__icon">
+        <use xlink:href="assets/img/SVG/sprite.svg#icon-bubble"></use>
+      </svg>
+    </a>
+    <a class="option">
+      <svg class="option__icon">
+        <use xlink:href="assets/img/SVG/sprite.svg#icon-cog"></use>
+      </svg>
+    </a>
+    <a class="option">
+      <svg class="option__icon">
+        <use xlink:href="assets/img/SVG/sprite.svg#icon-exit"></use>
+      </svg>
+    </a>
+  </nav>
+  <div class="chats">
+    <h2 class="chats__title">CHATS</h2>
+    <div class="chat-preview chat-preview--active">
+      <img
+        class="chat-preview__avatar"
+        src="assets/img/bot2.png"
+        alt="Bot avatar"
+      />
+      <div class="chat-preview__text">
+        <span class="chat-preview__botname">
+          R2-D2
+        </span>
+        <p class="chat-preview__message">
+          How are you doing? :)
+        </p>
       </div>
-      <ul class="side-nav">
-        <li class="side-nav__item side-nav__item--active">
-          <a href="#" class="side-nav__link">
-            <svg class="side-nav__icon">
-              <use xlink:href="assets/img/SVG/sprite.svg#icon-bubble"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="side-nav__item">
-          <a href="#" class="side-nav__link">
-            <svg class="side-nav__icon">
-              <use xlink:href="assets/img/SVG/sprite.svg#icon-cog"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="side-nav__item">
-          <a href="#" class="side-nav__link">
-            <svg class="side-nav__icon">
-              <use xlink:href="assets/img/SVG/sprite.svg#icon-exit"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="chat-previews">
-      <span class="chat-previews__title">Chats</span>
-      <div class="chat-preview">
-        <img class="chat-preview__picture" src="assets/img/bot1.png" alt="Bot picture">
-        <div class="chat-preview__info">
-          <span class="chat-preview__botname">
-            C-3PO
-          </span>
-          <span class="chat-preview__message">
-            Good bye!
-          </span>
-        </div>
+    </div>
+    <div class="chat-preview">
+      <img
+        class="chat-preview__avatar"
+        src="assets/img/bot1.png"
+        alt="Bot avatar"
+      />
+      <div class="chat-preview__text">
+        <span class="chat-preview__botname">
+          C-3PO
+        </span>
+        <p class="chat-preview__message">
+          Good bye!
+        </p>
       </div>
-      <div class="chat-preview">
-        <img class="chat-preview__picture" src="assets/img/bot2.png" alt="Bot picture">
-        <div class="chat-preview__info">
-          <span class="chat-preview__botname">
-            R2-D2
-          </span>
-          <span class="chat-preview__message">
-            How are you doing? :)
-          </span>
+    </div>
+  </div>
+  <div class="chat">
+    <h1 class="chat__botname">R2-D2</h1>
+    <div class="messages">
+      <div
+        *ngFor="let message of messages"
+        class="message-box"
+        [ngClass]="'message-box--'.concat(message.owner | lowercase)"
+      >
+        <img
+          class="message-box__picture"
+          [ngClass]="'message-box__picture--'.concat(message.owner | lowercase)"
+          [src]="
+            (message.owner | lowercase) == 'bot' ? botPicture : userPicture
+          "
+          alt="Bot picture"
+        />
+        <div
+          class="message-box__message message-box__message--bot"
+          [ngClass]="'message-box__message--'.concat(message.owner | lowercase)"
+        >
+          <span> {{ message.body }}</span>
         </div>
       </div>
     </div>
-    <div class="chat">
-      <span class="chat__botname">R2-D2</span>
-      <div class="messages">
-        <div class="message message--bot">
-          <img class="message__picture message--bot__picture" src="assets/img/bot2.png" alt="Bot picture">
-          <div class="message__text message--bot__text">
-            <span>Hellooo</span>
-          </div>
-        </div>
-        <div class="message message--user">
-          <img class="message__picture message--user__picture" src="assets/img/user.jpg" alt="User picture">
-          <div class="message__text message--user__text">
-            <span>Hello R2-D2..</span>
-          </div>
-        </div>
-        <div class="message message--bot">
-          <img class="message__picture message--bot__picture" src="assets/img/bot2.png" alt="Bot picture">
-          <div class="message__text message--bot__text">
-            <span>How are you doing? :)</span>
-          </div>
-        </div>
-      </div>
-      <div class="typer">
-        <span>Type something..</span>
-        <a href="#" class="side-nav__link">
-          <svg class="side-nav__icon">
-            <use xlink:href="assets/img/SVG/sprite.svg#icon-circle-right"></use>
-          </svg>
-        </a>
-      </div>
+    <div class="typer">
+      <input
+        (keyup.enter)="onSendMessage($event.target)"
+        class="typer__input"
+        type="text"
+        placeholder="Type something..."
+      />
+      <svg class="typer__button">
+        <use xlink:href="assets/img/SVG/sprite.svg#icon-circle-right"></use>
+      </svg>
     </div>
   </div>
 </div>
