--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,209 +1,196 @@
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.application {
-    display: flex;
-    box-shadow: 0 2rem 6rem rgba(0,0,0,.3);
-    height: 62.5rem;
-    min-width: 120rem;
+.application-grid {
+  display: grid;
+  grid-template-columns: 11rem 27.5rem 85rem;
 }
 
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.6rem;
-    flex: 0 0 15%;
+  background-color: #303841;
+  display: flex;
+  flex-direction: column;
 
-    &__user {
-        background-color: #363e47;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 2rem;
-
-        &-picture {
-            height: 4.5rem;
-            border-radius: 50%;
-            margin-bottom: 1rem;
-        }
-    }    
-}
-
-.side-nav {
-    background-color: #303841;
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    flex: 1;
-
-    &__item {
-        cursor: pointer;
-        padding: 1.5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        transition: all .2s;
-
-        &:last-child {
-            margin-top: auto;
-        }
-        
-        &:not(:last-child) {
-            margin-bottom: .5rem;
-        }
-    
-        &:hover,
-        &--active {
-            background-color: #434c57;
-        }
-    
-        &:active {
-            background-color: #4b5561;
-        }
-    }
-
-    &__link {
-        z-index: 2;
-    }
-
-    &__icon {
-        width: 2.5rem;
-        height: 2.5rem;
-        // currentColor acts like a variable for the current value of the 'color' property on the element. This helps in keeping our code DRY e.g when we want a certain color to be consistent in an element
-        fill: #a5b5c1;
-    }
-}
-
-.chat-previews {
-    background-color: #434c57;
+  .user-box {
     color: #fff;
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 25%;
+    padding: 1.5rem 0;
 
-    &__title {
-        font-size: 2rem;
-        padding: 1.5rem;
-        text-transform: uppercase;
-        align-self: center;
-    }
-}
-
-.chat-preview {
-    padding: 1rem;
     display: flex;
     align-items: center;
-        
-    transition: all .2s;
+    justify-content: center;
+    flex-direction: column;
 
-    &__info {
+    &__avatar {
+      border-radius: 50%;
+      height: 4.5rem;
+      margin-bottom: 0.75rem;
+    }
+
+    &__username {
+      font-size: 1.4rem;
+    }
+  }
+
+  .option {
+    cursor: pointer;
+    padding: 1rem 0;
     display: flex;
-    flex-direction: column;    
-    }
-
-    &__botname {
-        font-size: 1.7rem;
-    }
-
-    &__message {
-        font-size: 1.5rem;
-
-    }
-
-    &__picture {
-        height: 4rem;
-        border-radius: 50%;
-        margin-right: 1.5rem;
-    }
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.2s;
 
     &:hover {
-        background-color: #4b5561;        
+      background-color: #434c57;
     }
 
     &:active {
-        background-color: #505b68;    
+      background-color: #4b5561;
     }
+
+    &__icon {
+      fill: #a5b5c1;
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+
+    &:last-child {
+      margin-top: auto;
+    }
+  }
+}
+
+.chats {
+  background-color: #434c57;
+  color: #fff;
+
+  &__title {
+    text-align: center;
+    padding: 1rem 0;
+  }
+  .chat-preview {
+    cursor: pointer;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.2s;
+
+    &:hover,
+    &--active {
+      background-color: #5d6977;
+    }
+
+    &:active {
+      background-color: #505b68;
+    }
+
+    &__avatar {
+      height: 4rem;
+      border-radius: 50%;
+      margin-right: 1.5rem;
+    }
+
+    &__text {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__botname {
+      font-size: 1.7rem;
+    }
+
+    &__message {
+      font-size: 1.5rem;
+    }
+  }
 }
 
 .chat {
-    background-color: #f2f7f7;
-    color: #888888;
-    flex-direction: column;
-    flex: 0 0 60%;
-    display: flex;
+  background-color: #f2f7f7;
+  color: #888888;
 
-    &__botname {        
-        font-size: 1.8rem;
-        padding: 1rem;
-        text-transform: uppercase;
-        align-self: center;
+  display: grid;
+  grid-template-rows: auto 47.5rem auto;
 
-        border-bottom: 2px solid rgba(187, 182, 182, 0.329);
-    }
+  &__botname {
+    text-transform: uppercase;
+    justify-self: center;
 
-    .messages {
-        padding: 2rem 1rem;
-        flex: 1;
+    border-bottom: 2px solid rgba(187, 182, 182, 0.329);
+    padding: 1rem;
+  }
 
-        .message {
-            display: flex;
-            align-items: center;
+  .messages {
+    padding: 1rem;
+    overflow: auto;
+    position: relative;
+    bottom: 0;
 
-            &:not(:last-child) {
-                margin-bottom: 1.25rem;
-            }
+    .message-box {
+      display: flex;
+      align-items: center;
 
-            &__picture {
-                height: 5rem;
-                border-radius: 50%;
-            }
+      &:not(:last-child) {
+        margin-bottom: 1.25rem;
+      }
 
-            &__text {
-                box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.24);
-                font-size: 1.7rem;
-                padding: 1rem;
-            }
+      &--user {
+        flex-direction: row-reverse;
+      }
 
-            &--bot {
-                justify-content: flex-start;
+      &__picture {
+        height: 5rem;
+        border-radius: 50%;
 
-                &__picture {
-                    margin-right: 1.5rem;
-                }
-        
-                &__text {
-                    background-color: #fff;
-                }
-            }
-
-            &--user {         
-                flex-direction: row-reverse;
-
-                &__picture {
-                    margin-left: 1.5rem;
-                }
-        
-                &__text {
-                    background-color: #54d38a;
-                    color: #fff;
-                }
-            }
+        &--bot {
+          margin-right: 1.5rem;
         }
+
+        &--user {
+          margin-left: 1.5rem;
+        }
+      }
+
+      &__message {
+        box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.24);
+        font-size: 1.5rem;
+        padding: 1rem;
+        max-width: calc(100% - (2 * 8rem));
+        word-break: break-all;
+
+        &--bot {
+          background-color: #fff;
+        }
+
+        &--user {
+          background-color: #54d38a;
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  .typer {
+    background-color: #fff;
+
+    display: flex;
+    align-items: center;
+
+    &__input {
+      border: none;
+      outline: none;
+      font-size: 1.8rem;
+      flex: 0 0 90%;
+      padding: 1.5rem 1rem;
     }
 
-    .typer {
-        background-color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 1.5rem;
-        font-size: 1.8rem;
+    &__button {
+      cursor: pointer;
+      fill: #a5b5c1;
+      width: 2.25rem;
+      height: 2.25rem;
+      flex: 0 0 10%;
+      transition: fill 0.2s;
+
+      &:hover {
+        fill: #747f88;
+      }
     }
+  }
 }
