--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,23 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    line-height: 1.6;
-    background-color: #485869;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #485869;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
