--- a/Angular SPA/src/app/app.component.scss
+++ b/Angular SPA/src/app/app.component.scss
@@ -1,6 +1,39 @@
+.about-modal {
+  background-color: transparent;
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.8rem;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  transition: background-color 1s, transform 0.75s;
+  transform: translateY(-100%);
+
+  &--visible {
+    background-color: rgba(0, 0, 0, 0.9);
+    transform: translateY(0);
+  }
+
+  &__closer {
+    cursor: pointer;
+    font-size: 6rem;
+  }
+
+  &__section {
+    max-width: 33%;
+    word-break: break-all;
+  }
+}
+
 .application-grid {
   display: grid;
-  grid-template-columns: 11rem 27.5rem 85rem;
+  grid-template-columns: 11rem 112.5rem;
 }
 
 .sidebar {
@@ -28,7 +61,18 @@
     }
   }
 
+  .time {
+    color: #c8cdd1;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .option {
+    color: #a5b5c1;
+    font-size: 1.4rem;
     cursor: pointer;
     padding: 1rem 0;
     display: flex;
@@ -53,135 +97,5 @@
     &:last-child {
       margin-top: auto;
     }
-  }
-}
-
-.chats {
-  background-color: #434c57;
-  color: #fff;
-
-  &__title {
-    text-align: center;
-    padding: 1rem 0;
-  }
-  .chat-preview {
-    cursor: pointer;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    transition: background-color 0.2s;
-
-    &:hover,
-    &--active {
-      background-color: #5d6977;
-    }
-
-    &:active {
-      background-color: #72808f;
-    }
-
-    &__avatar {
-      height: 4rem;
-      border-radius: 50%;
-      margin-right: 1.5rem;
-    }
-
-    &__text {
-      display: flex;
-      flex-direction: column;
-    }
-
-    &__botname {
-      font-size: 1.7rem;
-    }
-
-    &__message {
-      font-size: 1.5rem;
-    }
-  }
-}
-
-.chat {
-  background-color: #f2f7f7;
-  color: #888888;
-
-  display: grid;
-  grid-template-rows: auto 47.5rem auto;
-
-  &__botname {
-    text-transform: uppercase;
-    justify-self: center;
-
-    border-bottom: 2px solid rgba(187, 182, 182, 0.329);
-    padding: 1rem;
-  }
-
-  .messages {
-    padding: 1rem;
-    overflow: auto;
-    position: relative;
-    bottom: 0;
-
-    &::-webkit-scrollbar {
-      width: 0.8rem;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #babac0;
-    }
-
-    &::-webkit-scrollbar-button {
-      display: none;
-    }
-
-    .message-box {
-      display: flex;
-      align-items: center;
-
-      &:not(:last-child) {
-        margin-bottom: 1.25rem;
-      }
-
-      &--user {
-        flex-direction: row-reverse;
-      }
-
-      &__picture {
-        height: 5rem;
-        border-radius: 50%;
-
-        &--bot {
-          margin-right: 1.5rem;
-        }
-
-        &--user {
-          margin-left: 1.5rem;
-        }
-      }
-
-      &__message {
-        box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.24);
-        font-size: 1.5rem;
-        padding: 1rem;
-        max-width: 50%;
-        word-break: break-all;
-
-        &--bot {
-          background-color: #fff;
-        }
-
-        &--user {
-          background-color: #54d38a;
-          color: #fff;
-        }
-      }
-    }
-  }
-
-  .typer {
-    border: none;
-    outline: none;
-    font-size: 1.8rem;
-    padding: 1.5rem 1rem;
   }
 }
