--- a/Angular SPA/src/app/admin/admin.component.scss
+++ b/Angular SPA/src/app/admin/admin.component.scss
@@ -1,4 +1,4 @@
-.chatter-grid {
+.admin-grid {
   display: grid;
   grid-template-columns: 17.5rem 95rem;
 }
@@ -16,7 +16,7 @@
     padding: 1rem;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     transition: background-color 0.2s;
 
     &:hover,
@@ -29,12 +29,13 @@
     }
 
     &__avatar {
+      margin-left: 1rem;
       height: 4.5rem;
       border-radius: 50%;
     }
 
     &__name {
-      font-size: 1.8rem;
+      font-size: 1.7rem;
     }
   }
 }
@@ -119,7 +120,7 @@ button {
     grid-template-areas:
       "title title"
       "body body";
-    grid-template-rows: 4rem 1fr;
+    grid-template-rows: 4.2rem 21rem;
 
     background-color: #eaecec;
 
@@ -147,5 +148,6 @@ button {
     grid-area: body;
     padding: 1rem;
     font-size: 1.4rem;
+    word-break: break-all;
   }
 }
