Integrar evaluador con app web

--- a/Angular SPA/src/app/app.component.html
+++ b/Angular SPA/src/app/app.component.html
@@ -2,7 +2,11 @@
   <div class="about-modal__section">
     <h2>Origen del proyecto</h2>
     <p>
-      Este proyecto fue desarrollado...
+      Esta aplicación fue desarrollada como proyecto para el curso de Paradigmas
+      de Programación - II Ciclo 2019. El objetivo principal fue aplicar
+      técnicas de programación LP-FP, para desarrollar un problema computacional
+      no tradicional: un compilador e interprete, de cierta parte del DSL
+      Rivescript.
     </p>
   </div>
   <div class="about-modal__section">
@@ -17,7 +21,8 @@
   <div class="about-modal__section">
     <h2>Créditos</h2>
     <p>
-      Por definir..
+      Carlos Loría Sáenz <br />
+      Anne Ogborn
     </p>
   </div>
   <a class="about-modal__closer" (click)="aboutIsShown = !aboutIsShown">
