--- a/Angular SPA/src/app/admin/admin.component.scss
+++ b/Angular SPA/src/app/admin/admin.component.scss
@@ -29,7 +29,7 @@
     }
 
     &__avatar {
-      margin-left: 1rem;
+      margin-right: 1rem;
       height: 4.5rem;
       border-radius: 50%;
     }
