Add login and messages retrieval

--- a/Angular SPA/src/app/app.component.html
+++ b/Angular SPA/src/app/app.component.html
@@ -29,7 +29,16 @@
     &uarr;
   </a>
 </div>
-<div class="application-grid">
+
+<div [ngClass]="{ 'login-modal': true, 'login-modal--visible': !userSignedIn }">
+  <input type="text" #user />
+  <input type="text" #password />
+  <button (click)="signUserIn(user, password)" type="button">
+    Ingresar
+  </button>
+</div>
+
+<div *ngIf="userSignedIn" class="application-grid">
   <nav class="sidebar">
     <div class="user-box">
       <img
@@ -37,7 +46,7 @@
         alt="User picture"
         class="user-box__avatar"
       />
-      <span class="user-box__username">User's name</span>
+      <span class="user-box__username">{{ username }}</span>
     </div>
     <a class="time">
       {{ time | date: "hh:mm:ss a" }}
@@ -45,7 +54,7 @@
     <a (click)="aboutIsShown = !aboutIsShown" class="option">
       About
     </a>
-    <a class="option">
+    <a (click)="signUserOut()" class="option">
       <svg class="option__icon">
         <use xlink:href="assets/img/SVG/sprite.svg#icon-exit"></use>
       </svg>
