--- a/Angular SPA/src/app/app.component.scss
+++ b/Angular SPA/src/app/app.component.scss
@@ -30,6 +30,24 @@
   }
 }
 
+.login-modal {
+  background-color: rgba(0, 0, 0, 0.25);
+  color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: all 0.75s;
+  visibility: hidden;
+  opacity: 0;
+
+  &--visible {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 .application-grid {
   display: grid;
   grid-template-columns: 11rem 112.5rem;
