--- a/Angular SPA/src/app/chatter/chatter.component.html
+++ b/Angular SPA/src/app/chatter/chatter.component.html
@@ -3,7 +3,7 @@
     <h2 class="chats__title">CHATS</h2>
     <div
       *ngFor="let botName of botsNames; let i = index"
-      (click)="selectedBot = botsNames[i]; messages = []"
+      (click)="selectedBot = botsNames[i]"
       class="chat-preview"
       [ngClass]="{ 'chat-preview--active': selectedBot == botsNames[i] }"
     >
@@ -16,17 +16,30 @@
         <span class="chat-preview__botname">
           {{ botName }}
         </span>
-        <p class="chat-preview__message">
-          Last message
+        <p
+          class="chat-preview__message"
+          [ngClass]="{
+            'chat-preview__message--loading': messages[botName] == undefined,
+            'chat-preview__message--send-one':
+              messages[botName] != undefined && messages[botName].length == 0
+          }"
+        >
+          {{
+            messages[botName] == undefined
+              ? "Cargando.."
+              : messages[botName].length == 0
+              ? "Envia un mensaje!"
+              : messages[botName][messages[botName].length - 1].body
+          }}
         </p>
       </div>
     </div>
   </div>
   <div class="chat">
-    <h1 class="chat__botname">BOT'S NAME</h1>
+    <h1 class="chat__botname">{{ selectedBot }}</h1>
     <div #messagesDiv class="messages">
       <div
-        *ngFor="let message of messages; let i = index"
+        *ngFor="let message of messages[selectedBot]; let i = index"
         class="message-box"
         [ngClass]="'message-box--'.concat(message.owner | lowercase)"
       >
@@ -49,7 +62,7 @@
             visibility: messageBeingSent ? 'hidden' : 'visible',
             opacity: messageBeingSent ? '0' : '1'
           }"
-          (click)="onSendMessage(messages[i].body)"
+          (click)="onSendMessage(messages[selectedBot][i].body)"
           *ngIf="(message.owner | lowercase) == 'user'"
           class="message-box__repeat-option"
           >Repetir mensaje</a
