--- a/Angular SPA/src/styles.scss
+++ b/Angular SPA/src/styles.scss
@@ -13,6 +13,7 @@ body {
   font-weight: 400;
 
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
