--- a/Angular SPA/src/app/app.component.scss
+++ b/Angular SPA/src/app/app.component.scss
@@ -31,6 +31,11 @@
 }
 
 .login-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   background-color: rgba(0, 0, 0, 0.25);
   color: #fff;
   position: absolute;
@@ -45,6 +50,34 @@
   &--visible {
     visibility: visible;
     opacity: 1;
+  }
+
+  &__title {
+    margin-bottom: 1.5rem;
+  }
+
+  &__input {
+    text-align: center;
+    margin-bottom: 1.25rem;
+    border: none;
+    outline: none;
+    font-size: 1.8rem;
+    padding: 1rem;
+
+    &:nth-child(3) {
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  &__button {
+    background-color: #2dce89;
+    cursor: pointer;
+    color: #fff;
+    border: none;
+    font-size: 1.5rem;
+    border-radius: 0.3rem;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    padding: 1rem;
   }
 }
 
